# ai-service

./: .gitignore  Dockerfile  ai_service.py  allergy.proto  database.py  deploy.env  main.py  pyproject.toml  schemas.py
.github/workflows/: deploy.yml
ai-service.git/: config
k8s/: deployment.yml  service.yml
